[gd_scene load_steps=28 format=3 uid="uid://0wc72b0o2o11"]

[ext_resource type="Script" path="res://game/player/ui/player_ui.gd" id="1_2pprn"]
[ext_resource type="Material" uid="uid://cmd5ms7ovbyru" path="res://game/player/ui/blood_vignette/blood_vignette.tres" id="2_k62wa"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick.tscn" id="2_x7k0l"]
[ext_resource type="Texture2D" uid="uid://d3dyhqt2lduyi" path="res://game/player/ui/joystick_base.png" id="3_svvw5"]
[ext_resource type="Texture2D" uid="uid://d01n7clmawdjx" path="res://game/player/ui/blood_vignette/vignette.png" id="3_tfa7a"]
[ext_resource type="Texture2D" uid="uid://d4b1wfymlf7bu" path="res://game/player/ui/health_bar_empty.png" id="4_425vn"]
[ext_resource type="Texture2D" uid="uid://cwx57jlb3j88p" path="res://game/player/ui/joystick_tip_move.png" id="4_opsbs"]
[ext_resource type="Texture2D" uid="uid://bqmrnwa8isfbe" path="res://game/player/ui/health_bar_immediate.png" id="5_2wb1l"]
[ext_resource type="Texture2D" uid="uid://low3v5d2q65l" path="res://game/player/ui/health_bar.png" id="5_3xbtg"]
[ext_resource type="Texture2D" uid="uid://chfx32osm5nwo" path="res://game/player/ui/joystick_tip_aim.png" id="5_5uxix"]
[ext_resource type="Texture2D" uid="uid://djbso2agyek2p" path="res://game/player/ui/additional_button.png" id="6_10yoo"]
[ext_resource type="Texture2D" uid="uid://p85ppsyx0g2n" path="res://game/player/ui/weapon_bg.png" id="7_6c3s8"]
[ext_resource type="Shader" path="res://game/player/ui/solid_color.gdshader" id="8_iqift"]
[ext_resource type="Texture2D" uid="uid://dhhiaodkovkws" path="res://game/player/ui/weapon_selection_bg.png" id="11_kgyyy"]
[ext_resource type="Texture2D" uid="uid://cqlo1boor0w4t" path="res://game/player/ui/skill_button.png" id="14_nojcu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xie73"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sal7"]
size = Vector2(640, 256)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jse5g"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hii6l"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c703a"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vprac"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fqc3t"]
shader = ExtResource("8_iqift")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/power = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4djl"]
size = Vector2(120, 120)

[sub_resource type="Animation" id="Animation_koxqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j6hmo"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1), Color(1, 0, 0, 0.25098), Color(0, 0, 0, 0.25098)]
}

[sub_resource type="Animation" id="Animation_42oh0"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.188235), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0ahq"]
_data = {
&"RESET": SubResource("Animation_koxqv"),
&"Death": SubResource("Animation_j6hmo"),
&"Hurt": SubResource("Animation_42oh0")
}

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2pprn")

[node name="Controller" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BloodVignette" type="TextureRect" parent="Controller"]
visible = false
material = ExtResource("2_k62wa")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_tfa7a")

[node name="HealthBar" type="TextureRect" parent="Controller"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -64.0
offset_right = 240.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("4_425vn")

[node name="HealthImmediate" type="TextureProgressBar" parent="Controller/HealthBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -48.0
offset_right = 240.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
step = 0.001
value = 100.0
texture_progress = ExtResource("5_2wb1l")

[node name="Health" type="TextureProgressBar" parent="Controller/HealthBar"]
material = SubResource("ShaderMaterial_xie73")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -48.0
offset_right = 240.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource("5_3xbtg")

[node name="Label" type="Label" parent="Controller/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TouchControls" type="Control" parent="Controller"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveVirtualJoystick" parent="Controller/TouchControls" instance=ExtResource("2_x7k0l")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -328.0
offset_right = 328.0
offset_bottom = -128.0
grow_vertical = 0
joystick_mode = 1
pressed_color = Color(0, 0.273438, 1, 1)
base_texture = ExtResource("3_svvw5")
tip_texture = ExtResource("4_opsbs")
use_input_actions = false

[node name="AimVirtualJoystick" parent="Controller/TouchControls" instance=ExtResource("2_x7k0l")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -328.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0
joystick_mode = 1
pressed_color = Color(1, 0, 0, 1)
base_texture = ExtResource("3_svvw5")
tip_texture = ExtResource("5_5uxix")
use_input_actions = false

[node name="ShootArea" type="TouchScreenButton" parent="Controller/TouchControls"]
position = Vector2(320, 128)
shape = SubResource("RectangleShape2D_6sal7")

[node name="Anchor" type="Control" parent="Controller/TouchControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="AdditionalButton" type="TouchScreenButton" parent="Controller/TouchControls/Anchor"]
position = Vector2(-128, -128)
texture_normal = ExtResource("6_10yoo")

[node name="WeaponSelection" type="Control" parent="Controller"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BGLight" type="TextureRect" parent="Controller/WeaponSelection"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(220, 220)
mouse_filter = 2
texture = ExtResource("11_kgyyy")

[node name="BGHeavy" type="TextureRect" parent="Controller/WeaponSelection"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1, -1)
pivot_offset = Vector2(220, 220)
mouse_filter = 2
texture = ExtResource("11_kgyyy")

[node name="BGSupport" type="TextureRect" parent="Controller/WeaponSelection"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(220, 220)
mouse_filter = 2
texture = ExtResource("11_kgyyy")

[node name="BGMelee" type="TextureRect" parent="Controller/WeaponSelection"]
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
scale = Vector2(1, -1)
pivot_offset = Vector2(220, 220)
mouse_filter = 2
texture = ExtResource("11_kgyyy")

[node name="LightWeaponIcon" type="TextureRect" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_jse5g")
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = 64.0
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LightWeaponName" type="Label" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 48.0
offset_top = 56.0
offset_right = 208.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="HeavyWeaponIcon" type="TextureRect" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_hii6l")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 192.0
grow_horizontal = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="HeavyWeaponName" type="Label" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 184.0
offset_right = 94.0
offset_bottom = 207.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1

[node name="SupportWeaponIcon" type="TextureRect" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_c703a")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -192.0
offset_right = 64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="SupportWeaponName" type="Label" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = -72.0
offset_right = 94.0
offset_bottom = -48.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1

[node name="MeleeWeaponIcon" type="TextureRect" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_vprac")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -64.0
offset_right = -64.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="MeleeWeaponName" type="Label" parent="Controller/WeaponSelection"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_top = 56.0
offset_right = -48.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="CurrentWeapon" type="TextureRect" parent="Controller"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -232.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("7_6c3s8")

[node name="Icon" type="TextureRect" parent="Controller/CurrentWeapon"]
material = SubResource("ShaderMaterial_fqc3t")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Controller/CurrentWeapon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -31.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "120/60"

[node name="PCCurrentWeapon" type="ReferenceRect" parent="Controller"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -288.0
offset_top = 200.0
offset_bottom = 344.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
border_width = 4.0

[node name="Skill" type="TextureProgressBar" parent="Controller"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -80.0
offset_right = -8.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 4
texture_under = ExtResource("14_nojcu")
texture_progress = ExtResource("14_nojcu")
tint_under = Color(1, 1, 1, 0.501961)
tint_progress = Color(1, 1, 1, 0.752941)

[node name="Icon" type="TextureRect" parent="Controller/Skill"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Count" type="Label" parent="Controller/Skill"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -65.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
horizontal_alignment = 2
vertical_alignment = 2

[node name="TouchScreenButton" type="TouchScreenButton" parent="Controller/Skill"]
position = Vector2(60, 60)
shape = SubResource("RectangleShape2D_x4djl")

[node name="PCSkill" type="ReferenceRect" parent="Controller"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 71.0
offset_right = -8.0
offset_bottom = 191.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
border_width = 4.0

[node name="PlayerTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerTint"]
libraries = {
&"": SubResource("AnimationLibrary_e0ahq")
}

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="SingleShotTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="Controller/TouchControls/Anchor/AdditionalButton" to="." method="additional_button"]
[connection signal="pressed" from="Controller/Skill/TouchScreenButton" to="." method="use_skill"]
[connection signal="timeout" from="SingleShotTimer" to="." method="_on_single_shot_timer_timeout"]
